--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "openai (>=1.66.3,<2.0.0)",
-    "fastapi (>=0.115.11,<0.116.0)"
+    "fastapi (>=0.115.11,<0.116.0)",
+    "dotenv (>=0.9.9,<0.10.0)"
 ]
 
 
